--- a/Aula 5/Ex while/Contagem regressiva/index.html
+++ b/Aula 5/Ex while/Contagem regressiva/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contagem regressiva</title>
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
 
 </head>
 <body>
-    <label for="contagem">Insira um número: </label>
-    <input type="number" for="contagem" id="contagem">
-    <input type="button" onclick="cont()" value="Contagem">
-    <p id="regresso"></p>
+    
+    <div class="container">
+        <label for="contagem">Contagem regressiva</label>
+        <input type="button" onclick="bot()" value="resposta">
+        <p id="regresso"></p>
+    </div>
 
 
-    <script src="./js/script.js" ></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
