--- a/Aula 5/Ex while/Tabuadas Ex 2 e 4/index.html
+++ b/Aula 5/Ex while/Tabuadas Ex 2 e 4/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tabuada</title>
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+
 
 </head>
 <body>
-    <label for="contagem">Insira um número: </label>
-    <input type="number" for="contagem" id="contagem">
-    <input type="button" onclick="cont()" value="Contagem">
-    <p id="regresso"></p>
+    <div class="container">
+        <label for="tabuada">Insisra um número qualquer e dexcubra sua tabuada: </label>
+        <input type="number" for="tabuada" id="tabuada">
+        <input type="button" onclick="tabuadas()" value="Calcule">
+        <p id="mult"></p>
+    </div>
 
 
     <script src="./js/script.js" ></script>
